<resources>
    <string name="app_name">Al Hayah Laboratory</string>
    <string name="imageContentDescription">Image</string>
    <string name="main_menu_phoneText">phone</string>
    <string name="main_menu_langText">عربي</string>
    <string name="main_menu_aboutText">About Application</string>
    <string name="main_view_tag_homeVisit">Home Visit</string>
    <string name="main_view_tag_offers">Offers</string>
    <string name="main_view_tag_results">Results</string>
    <string name="main_view_tag_branches">Branches</string>
    <string name="main_view_tag_packages">Packages</string>
    <string name="main_view_tag_healthTips">Health Tips</string>
    <string name="main_view_tag_examinationPrecautions">Examination Precautions</string>
    <string name="main_view_tag_announcement">Announcement</string>
    <string name="main_view_tag_contactUs">Contact Us</string>
    <string name="main_view_tag_aboutUs">About Us</string>
    <string name="splashActivity_updateDialogContent">update to the latest version to enjoy better services.</string>
    <string name="splashActivity_updateDialogTitle">There is new Version</string>
    <string name="splashActivity_update">update</string>
    <string name="splashActivity_Exit">Exit</string>
    <string name="splashActivity_discard">discard</string>
    <string name="splash_poorConnectionTip">poor network connection</string>
    <string name="Slider_next">next</string>
    <string name="Slider_skip">skip</string>
    <string name="Slider_start">start</string>
    <string name="splashActivity_ask4network_title">Alert</string>
    <string name="splashActivity_ask4network_message">The app has not been connected to the network before, you have to connect to the internet and reopen the app.</string>
    <string name="splashActivity_unExpectedError_title">Sorry</string>
    <string name="splashActivity_unExpectedError_message">An unexpected error has occurred. Please try again later.</string>
    <string name="sliderActivity_alertTitle">sorry about that</string>
    <string name="sliderActivity_alertMessage">You have to make sure you have a good network connection and reopen the app at a later time.</string>
    <string name="opening">Opening…</string>
    <string name="noOffersTip">There are no offers</string>
    <string name="noBranches_tip">There are no branches</string>
    <string name="noPackages_tip">There are no packages</string>
    <string name="noAnnouncements_tip">There are no Announcements</string>
    <string-array name="notificationTitle">
        <item>There is a new offer</item>
        <item>There is a new package</item>
        <item>There is a new medical advice</item>
        <item>There is a new branch</item>
        <item>There is a new announcement</item>
    </string-array>
    <string name="Slider_firstSlide_header">Hi tech</string>
    <string name="Slider_firstSlide_tip">Now through your phone, the lab is the one who will come to you</string>
    <string name="Slider_secondSlide_header">Home visit</string>
    <string name="Slider_secondSlide_tip">Through your phone, you can request a home visit to collect the sample from home</string>
    <string name="Slider_thirdSlide_header">Result request</string>
    <string name="Slider_thirdSlide_tip">We will also provide you with the results of the analysis through the application</string>
    <string name="Slider_fourSlide_header">Lots of medical advice</string>
    <string name="Slider_fourSlide_tip">You will receive medical advice to maintain your health that prevention is better than cure</string>
    <string name="Slider_fiveSlide_header">Offers</string>
    <string name="Slider_fiveSlide_tip">You will be able to enjoy lab offers and discounts by simply using the application</string>
    <string name="Slider_sixSlide_header">let\'s go</string>
    <string name="Slider_sixSlide_tip">Let\'s start getting lab services online</string>
    <string name="detailsActivityTitle">Details</string>
    <string name="see_more">SEE MORE…</string>
    <string name="map">Map</string>
    <string name="like_facebook">Like us on Facebook</string>
    <string name="whatsapp">Whatsapp: 01094975895</string>
    <string name="send_mail">Send an E-mail</string>
    <string name="rate_play_store">Rate us on Play Store</string>
    <string name="version">Version: %1$s</string>
    <string name="myWhatsapp">Whatsapp: 01015677225</string>
    <string name="app_creation_welcome">App is Created by Mostafa Abd-Elkader</string>
    <string name="InputLayout_fullName">Full name</string>
    <string name="InputLayoutPhone">Phone</string>
    <string name="InputLayoutFull_address">Address</string>
    <string name="InputLayoutTestName">Test name</string>
    <string name="InputLayoutNotes">Notes</string>
    <string name="submit">Submit</string>
    <string name="attach">Attach</string>
    <string name="homeVisitRequest_title">Home Visit Request</string>
    <string name="homVisitTip">Please Fill in the data below and we will reach you as soon as possible</string>
    <string name="requestSent_title">Request sent</string>
    <string name="requestSent_description">Your request has been sent successfully and we will contact you as soon as possible.</string>
    <string name="ok">OK</string>
    <string name="sendingPictureTitle">Sending a picture</string>
    <string name="sendingPictureMessage">From where do you want to send the photo?</string>
    <string name="sendingPictureButton1">Capture image</string>
    <string name="sendingPictureButton2">Choose an image</string>
    <string name="cancel">Cancel</string>
    <string name="imageNotSelected">Image not selected</string>
    <string name="fieldRequired">This field is required.</string>
    <string name="wrongPhone">Wrong phone number.</string>
    <string name="gpsDisabledTitle">GPS seems to be disabled</string>
    <string name="gpsDisabledMessage">Enable GPS and resend the order, do you want to enable it now?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="enableGps">Turn on GPS</string>
    <string name="loadingTextGetLocation">getting location…</string>
    <string name="loadingTextSendOrder">sending order…</string>
    <string name="location">Location</string>
    <string name="alertIfAttachLocationMessage">Do you want to attach your current location to the request so that a lab representative can reach you easily?</string>
    <string name="gpsNotAllowedMessage">The application should have permission to find the location to be included with the request.</string>
    <string name="sendPictureTitle">Sending a picture</string>
    <string name="sendPictureMessage">From where do you want to send the photo?</string>
    <string name="sendPictureButton1">Capture image</string>
    <string name="sendPictureButton2">Choose an image</string>
    <string name="uploadingImage">Uploading Image…</string>
    <string name="percentage">Percentage: \</string>
    <string name="imageUploaded">Image Attached Successfully.</string>
    <string name="undo">undo</string>
    <string name="imageCanceled">Image selection canceled.</string>
    <string name="gpsNotAllowed">The current location can\'t be attached to the application without granting the application access to location.</string>
    <string name="patient_name">Patient name</string>
    <string name="resultActivityTip">Please Enter The phone number Which registered with us and we will contact you via phone call or whatsapp.</string>
    <string name="oneTimeUse_Tip">This offer is for one time use.</string>
    <string name="resultRequest_title">Result Request</string>
    <string name="protect_fromCovid_title">Protect yourself from COVID-19</string>
    <string name="dangerOfObesity_title">Danger of Obesity</string>
    <string name="foodAllergy_title">Food Allergy</string>
    <string name="bloodPicture_title">Importance of Complete Blood Picture</string>
    <string name="breastCancer_title">Breast Cancer Awareness</string>
    <string name="sensitivityOfInhalants_title">Sensitivity of Inhalants</string>
    <string name="eatNuts_title">Eat Nuts</string>
    <string name="drinkSugar_title">Don\'t Drink Sugar Calories</string>
    <string name="junkFood_title">Avoid Processed Junk Food</string>
    <string name="fearCoffe_title">Don\'t Fear Coffee</string>
    <string name="fattyFich_title">Eat Fatty Fish</string>
    <string name="enoughSleep_title">Get Enough Sleep</string>
    <string name="protect_fromCovid_desc">Always clean hands by rubbing them with an alcohol disinfectant or washing them thoroughly with soap and water. \n\nWhen coughing and sneezing, be sure to cover your mouth and nose with your folded elbow or tissue, and dispose of the tissue immediately and wash your hands. \n\nAvoid approaching people with fever and cough, and keep a distance of at least one meter (3 feet). \n\nIf you have a fever, cough, and difficulty breathing, seek medical attention early. \n\nTo conduct Corona analyzes, call us now on 01094975895</string>
    <string name="dangerOfObesity_desc">When your weight increases or you are already a fat person, you are worried, self-distrust and it\'s dangerous to your \n\nhealth The risk of obesity\n\n- Cardiology \n\n- Hypertension \n\n- brain attack \n\n- type 2 diabetes \n\n- Increase harmful blood fats \n\n- Arthritis \n\n- cancer \n\n- gallstones \n\n- gout \n\n\n\nIn Al Hayah Laboratory, you can perform 5 analyzes of obesity before starting treatment and diet to ensure safe steps Analysis of kidney functions, liver functions, thyroid, triglycerides, analysis of sugar and its types</string>
    <string name="foodAllergy_desc">Many mothers mingle with their children when exposed to some kind of allergies. \n\nWhere they are many types and vary person to person Al Hayah Laboratory from has a sensitivity test for 30 types of food and inhalation with only one sample can through this device to identify the type of sensitivity and cause anything from the nearest Be safe and take the test of sensitivity testing for your child</string>
    <string name="bloodPicture_desc">Have you ever known the importance of analyzing a Complete Blood Picture? It is one of the most important tests that easily detect blood diseases and other diseases that affect the functions of the body. \n\nSometimes you may feel overwhelmed and unable to do your own tasks, which may be due to anemia in your blood You may find your child does not have a full grasp of his or her school material \n\nYou should perform a complete blood image analysis on a regular basis to ensure your health and the health of your children</string>
    <string name="breastCancer_desc">Breast cancer is one of the most prevalent diseases of women and threatens a large part of their lives \n\nEarly detection of breast cancer can reduce the risk of developing breast cancer Check and start right \n\nTo order sample withdrawal from the house, call 01094975895</string>
    <string name="sensitivityOfInhalants_desc">One of the most difficult types of allergy is the \"sensitivity of inhalants,\" especially in the periods of dust and coolness and months of study for students Allergic infertility causes the symptoms of allergy, eye and nose and chest infections such as pollen, cats, birds, and dust mites, which causes the person to get hurt and enter into a long and painful illness. \n\nSome people may not know what is the cause of allergies, what kind of allergies and how long they are there. \n\nAl Hayah Laboratory offers this test for 30 different types of fungi, inhalants, dust, perfumes and paints</string>
</resources>