<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/slider_back_3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/img_slide3"
        android:fitsSystemWindows="true"
        android:layout_gravity="center"

        android:background="@null"
        android:contentDescription="@string/imageContentDescription"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Slider_thirdSlide_header"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Slider_thirdSlide_tip"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        />

</LinearLayout>