<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactUsActivity"
    android:orientation="vertical"
    android:background="#c0c0c0">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/contact_logo"
        android:contentDescription="@string/imageContentDescription"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/like_facebook"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_facebook"
        android:onClick="facebookClicked"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_whatsapp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_mail"
        android:onClick="mailClicked"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_play_store"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_play"
        android:onClick="googlePlayClicked"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

</LinearLayout>