<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutAppActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/ic_android"
        android:contentDescription="@string/imageContentDescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/app_creation_welcome"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/like_facebook"-->
<!--        android:padding="10dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:gravity="center_vertical"-->
<!--        android:drawablePadding="8dp"-->
<!--        android:textColor="@color/white"-->
<!--        app:drawableStartCompat="@drawable/ic_facebook"-->
<!--        android:onClick="facebookClicked"/>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="#FFFFFF"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myWhatsapp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_whatsapp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_play_store"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_play"
        android:onClick="googlePlayClicked"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

</LinearLayout>